--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>Document</title>
 </head>
 <body>
-    <ol type="a" start="5">
-        <li>Salom</li>
-        <li type="A">Alik</li>
-        <li>SSSS</li>
-    </ol>
+    <h2>Bu BOsh Sahifa</h2>
+    <a href="index.html">Bosh Sahifa</a> <br><br>
+    <a href="sahifa3.html">Sahifa 3</a>
 </body>
 </html>
